# aleto

./: .gitignore  CMakeLists.txt  README.md
libs/json/: CMakeLists.txt
libs/musoci/: CMakeLists.txt  base.hpp  driver.cpp  driver.hpp  postgresql.cpp  postgresql.hpp  sqlite.cpp  sqlite.hpp  types.hpp
libs/sqlite3/: CMakeLists.txt
src/: App.cpp  App.h  App.hpp  MainFrame.cpp  MainFrame.h  MainFrame.hpp  main.cpp
src/core/: config.hpp
src/ui/: FormFrame.hpp  MainFrame.hpp
